<resources>
    <string name="app_name">aMetro</string>
    <string name="title_catalog_local">My Maps</string>
    <string name="title_catalog_online">Catalog</string>
    <string name="title_catalog_import">Import</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="stress">Stress</string>
    <string name="import_status_not_imported">not imported</string>
    <string name="import_status_deprecated">new version</string>
    <string name="import_status_uptodate">already imported</string>
    <string name="import_status_override">file name conflict with %s - %s</string>
    <string name="import_status_invalid">invalid .pmz file</string>
    <string name="import_title_confirm">Import</string>
    <string name="import_title_indexing">Import</string>
    <string name="import_title_report">Import - press back to exit</string>
    <string name="import_status_old_version">old version</string>
    <string name="import_title_importing">Import</string>
    <string name="import_title_empty">Import - empty</string>
    <string name="template_progress_count">%s of %s</string>
    <string name="template_progress_percent">%s%%</string>
    <string name="search_label">label</string>
    <string name="search_hint">search stations...</string>
    <string name="search_station">Station Search</string>
    <string name="create_route_from">source station</string>
    <string name="create_route_to">destination station</string>
    <string name="create_route_without_time">Ignore waiting</string>
    <string name="create_route_swap_button">Swap</string>
    <string name="create_route_create_button">Find</string>
    <string name="create_route_wait_title">Find routes</string>
    <string name="create_route_wait_text">Please wait...</string>
    <string name="create_route_mode_transfer_button">Time</string>
    <string name="create_route_mode_time_button">Transfers</string>
    <string name="create_route_favorites_button">Favorites</string>
    <string name="favorite_route_delete">Delete</string>
    <string name="favorite_route_cancel">Cancel</string>
    <string name="locate_wait_title">Search location</string>
    <string name="locate_station_wait_title">Search station</string>
    <string name="locate_wait_text">Please wait...</string>
    <string name="pref_section_general">Other</string>
    <string name="pref_section_debug">Debug</string>
    <string name="pref_locale_key">LOCALE</string>
    <string name="pref_locale">Language</string>
    <string name="pref_auto_locate">Find Location</string>
    <string name="pref_auto_locate_key">AUTO_LOCATION</string>
    <string name="pref_locale_description">Language with used to display UI and data</string>
    <string name="pref_auto_locate_description">Use GPS/GSM location to locate Your position</string>
    <string name="pref_debug">Debug enabled</string>
    <string name="pref_debug_key">DEBUG</string>
    <string name="pref_debug_description">Check for display debug messages</string>
    <string name="pref_auto_import_addons">Import Addons</string>
    <string name="pref_auto_import_addons_description">import text information from PMZ maps</string>
    <string name="pref_auto_import_addons_key">IMPORT_ADDONS</string>
    <string name="pref_anti_alias">Enable Anti-aliasing</string>
    <string name="pref_anti_alias_key">ANTI_ALIAS</string>
    <string name="pref_anti_alias_description">Anti-aliase map graphics</string>
    <string name="pref_anti_alias_disable_on_scroll">Disable Anti-aliasing on scrolling</string>
    <string name="pref_anti_alias_disable_on_scroll_key">ANTI_ALIAS_DISABLE_ON_SCROLL</string>
    <string name="pref_anti_alias_disable_on_scroll_description">Disable Anti-aliasing while map scrolling on slow devices</string>
    <string name="pref_section_graphic">Rendering</string>
    <string name="pref_section_graphic_description">Map rendering options</string>
    <string name="pref_section_auto_update">Online maps catalog</string>
    <string name="pref_section_auto_update_description">Online maps catalog access options</string>
    <string name="pref_auto_update_map_index_on_show">Update at show</string>
    <string name="pref_auto_update_map_index_on_show_key">AUTO_UPDATE_INDEX_ON_SHOW</string>
    <string name="pref_auto_update_map_index_on_show_description">Download online maps list when displayed, but not frequently than once a hour</string>
    <string name="pref_auto_update_map_index">Check maps updates</string>
    <string name="pref_auto_update_map_index_key">AUTO_UPDATE_INDEX</string>
    <string name="pref_auto_update_map_index_description">Update online maps list when Internet available</string>
    <string name="pref_auto_update_maps">Auto update maps</string>
    <string name="pref_auto_update_maps_key">AUTO_UPDATE_MAPS</string>
    <string name="pref_auto_update_maps_description">Update maps when Internet available</string>
    <string name="pref_auto_update_url">Online catalog URL</string>
    <string name="pref_auto_update_url_key">ONLINE_CATALOG_URL</string>
    <string name="pref_auto_update_url_description">Web URL of online maps list. Leave empty for default.</string>
    <string name="pref_auto_update_url_message">Leave empty for default</string>
    <string name="pref_auto_update_period">Update Period</string>
    <string name="pref_auto_update_period_key">AUTO_UPDATE_PERIOD</string>
    <string name="pref_auto_update_period_description">Update period</string>
    <string name="pref_auto_update_networks">Network Usage</string>
    <string name="pref_auto_update_networks_key">AUTO_UPDATE_NETWORKS</string>
    <string name="pref_auto_update_networks_description">Which networks to use for update</string>
    <string name="pref_section_maplist">Map Lists</string>
    <string name="pref_section_maplist_description">Map lists display settings</string>
    <string name="pref_refresh_country_icons">Refresh country icons</string>
    <string name="pref_refresh_country_icons_key">REFRESH_COUNTRY_ICONS</string>
    <string name="pref_refresh_country_icons_description">Force update country icons pack from server</string>
    <string name="pref_enable_country_icons">Enable country icons</string>
    <string name="pref_enable_country_icons_key">ENABLE_COUNTRY_ICONS</string>
    <string name="pref_enable_country_icons_description">Show country icons in maps list</string>
    <string name="pref_import">Enable PMZ import</string>
    <string name="pref_import_key">PMZ_IMPORT</string>
    <string name="pref_import_description">Check to allow import of PMZ map format</string>
    <string name="pref_section_license">License</string>
    <string name="pref_section_license_key">LICENSE</string>
    <string name="pref_section_license_description">See information about program license</string>
    <string name="pref_section_donate">Support Developers</string>
    <string name="pref_section_donate_key">DONATE</string>
    <string name="pref_section_donate_description">You can donate to developers here</string>
    <string name="pref_donate_paypal_mpl">via PayPal</string>
    <string name="pref_donate_paypal_mpl_key">DONATE_PAYPAL_LIBRARY</string>
    <string name="pref_donate_paypal_mpl_description">using official PayPal Mobile Platform Library</string>
    <string name="pref_donate_paypal">via PayPal</string>
    <string name="pref_donate_paypal_key">DONATE_PAYPAL</string>
    <string name="pref_donate_paypal_description">disabled</string>
    <string name="pref_donate_yandex">via Yandex.Money</string>
    <string name="pref_donate_yandex_key">DONATE_YANDEX</string>
    <string name="pref_donate_yandex_description">41001667593841, open donate web form on money.yandex.ru</string>
    <string name="pref_donate_wm">via WebMoney</string>
    <string name="pref_donate_wm_key">DONATE_WM</string>
    <string name="pref_donate_wm_description">R191907383552, Z422979142707, open WMKeeper Light</string>
    <string name="pref_donate_mb">via MoneyBookers</string>
    <string name="pref_donate_mb_key">DONATE_MB</string>
    <string name="pref_donate_mb_description">open donate web form on www.moneybookers.com</string>
    <string name="pref_donate_alertpay">via AlertPay</string>
    <string name="pref_donate_alertpay_key">DONATE_ALERTPAY</string>
    <string name="pref_donate_alertpay_description">open donate web form on www.alertpay.com</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Maps</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_time">Day/Night</string>
    <string name="menu_station">Station</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_experimental">Experimental</string>
    <string name="menu_refresh_list">Refresh</string>
    <string name="menu_update_maps">Update</string>
    <string name="menu_import_maps">Import</string>
    <string name="menu_download_maps">Download</string>
    <string name="menu_delete_maps">Delete</string>
    <string name="menu_delete_pmz">Delete</string>
    <string name="menu_location">Where am I?</string>
    <string name="menu_import">Import</string>
    <string name="menu_download">Download</string>
    <string name="menu_all_maps">All Maps</string>
    <string name="menu_my_maps">My Maps</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_select_none">Select None</string>
    <string name="menu_cleanup">Cleanup</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_sort_by_name">By Name</string>
    <string name="menu_sort_by_line">By Line</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_add">Add</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_ignore">Ignore</string>
    <string name="menu_swap">Swap</string>
    <string name="menu_show_on_map">Show On Map</string>
    <string name="menu_select">Select</string>
    <string name="menu_info">Information</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_schemes">Schemes</string>
    <string name="menu_transports">Transports</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_cancel_all">Cancel All</string>
    <string name="context_menu_show_map">Open</string>
    <string name="context_menu_show_map_details">Details</string>
    <string name="context_menu_download">Download</string>
    <string name="context_menu_import">Import</string>
    <string name="context_menu_update">Update</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_delete_pmz">Delete PMZ</string>
    <string name="context_menu_catalog_header">Map</string>
    <string name="menu_"/>
    <string name="msg_loading">Loading...</string>
    <string name="msg_caching">Caching map...</string>
    <string name="msg_no_maps_in_library">No maps in library</string>
    <string name="msg_press_menu_import">press menu and import new maps</string>
    <string name="msg_no_map_loaded">No map loaded</string>
    <string name="msg_press_menu_maps">press menu and select map</string>
    <string name="msg_import_pmz_progress">"Importing map %s/%s"</string>
    <string name="msg_copy_files_to_import">copy PMZ files to SD card catalog</string>
    <string name="msg_import_path">/sdcard/ametro/import</string>
    <string name="msg_loading_maps">Loading maps...</string>
    <string name="msg_no_addons">Station description not found</string>
    <string name="msg_addon_corrupted">Station description corrupted</string>
    <string name="msg_error_map_loading">Error map loading</string>
    <string name="msg_route_time">Trip time is  </string>
    <string name="msg_no_maps_in_import">Use need to copy .PMZ files into /sdcard/ametro/import and detach your smartphone from PC. Press Refresh to refresh</string>
</resources>